syntax = "proto3";
package hashicorp.hyparview.example.hyparview;
option go_package = "proto";

service Hyparview {
  rpc RecvJoin (Empty) returns (Empty) {}
  rpc RecvForwardJoin (ForwardJoinRequest) returns (Empty) {}
  rpc RecvDisconnect (Empty) returns (Empty) {}
  rpc RecvNeighbor (NeighborRequest) returns (NeighborResponse) {}
  rpc RecvShuffle (ShuffleRequest) returns (ShuffleReply) {}
  rpc RecvShuffleReply (ShuffleReply) returns (Empty) {}
}

message Empty {
}

message ForwardJoinRequest {
  int32 ttl = 1;
  string join = 2;
}

message NeighborRequest {
  bool priority = 1;
}

message NeighborResponse {
  bool accept = 1;
}

message ShuffleRequest {
  int32 ttl = 1;
  repeated string active = 2;
  repeated string passive = 3;
}

message ShuffleReply {
  repeated string passive = 1;
}
